k8s/tech-chart/templates/app-tech-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-tech-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: alb-tech-223571255.us-east-1.elb.amazonaws.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-tech-service
                port:
                  number: 8080
